--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 
 <style>
-/* ===== CoreFlux Simpit — Clean CSS ===== */
+/* ===== CoreFlux Simpit — Clean CSS (No Scroll Lighting) ===== */
 
 /* ---- Tokens ---- */
 :root{
@@ -37,20 +37,34 @@ body{
   margin:0;
   font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
   color:var(--text);
-  background:
-    radial-gradient(1200px 800px at 70% -10%, rgba(0,198,255,.12), transparent 60%),
-    radial-gradient(1000px 700px at 10% 20%, rgba(255,210,63,.10), transparent 60%),
-    linear-gradient(180deg,var(--bg-2) 0%,var(--bg) 60%,var(--bg-3) 100%);
+
+  /* SINGLE, FIXED background (kills scroll lighting) */
+  background-color:var(--bg);
+  background-image:
+    radial-gradient(1000px 700px at 70% -10%, rgba(0,198,255,.10) 0%, transparent 60%),
+    radial-gradient(900px 600px at 10% 20%, rgba(255,210,63,.07) 0%, transparent 60%),
+    radial-gradient(circle at 50% 120%, rgba(0,0,0,.6) 0%, rgba(0,0,0,0) 70%);
+  background-repeat:no-repeat;
+  background-attachment:fixed;
+
+  /* removed old vertical banding gradient */
   overflow-x:hidden;
 }
 a{color:inherit;text-decoration:none}
 img{max-width:100%;display:block}
 .wrap{width:min(1200px,92vw);margin:0 auto}
-.lede{color:var(--muted);font-size:clamp(15px,1.25vw,18px)}
-section{padding:48px 0}
+.lede{color:var(--muted);font-size:clamp(15px,1.25vw,18px);line-height:1.5;font-weight:500;max-width:640px}
+section{padding:48px 0;position:relative;z-index:1}
 
-/* Global AI particles canvas */
-#aiCanvas{position:fixed;inset:0;z-index:-1;pointer-events:none;opacity:.7;transition:opacity .8s ease}
+/* Global AI particles canvas – fixed brightness */
+#aiCanvas{
+  position:fixed;
+  inset:0;
+  z-index:-1;
+  pointer-events:none;
+  opacity:.55;
+  transition:none;
+}
 
 /* ---- NAV ---- */
 .nav{
@@ -69,7 +83,7 @@ section{padding:48px 0}
   display:grid; place-items:center;
   background:rgba(255,255,255,0.02);
   border:1px solid rgba(255,255,255,0.08);
-  flex:0 0 auto; /* hard stop shrinking */
+  flex:0 0 auto;
 }
 .brand__logo-img{
   height:100%; width:auto; max-height:70px;
@@ -80,40 +94,72 @@ section{padding:48px 0}
 .chip{
   padding:8px 14px;border:1px solid var(--border);
   border-radius:999px;color:var(--muted);
-  transition:120ms ease;font-weight:600
+  transition:120ms ease;font-weight:600;font-size:.9rem;line-height:1.2;
 }
 .chip:hover{color:var(--text);border-color:rgba(255,255,255,.18)}
 .cta{
   padding:10px 16px;border-radius:14px;
   background:linear-gradient(135deg,var(--accent),#4be3d1);
-  color:#041221;font-weight:800;
-  box-shadow:0 12px 28px rgba(0,198,255,.28)
+  color:#041221;font-weight:800;font-size:.9rem;line-height:1.2;
+  box-shadow:0 12px 28px rgba(0,198,255,.28);border:none;cursor:pointer;
 }
 
 /* ---- HERO ---- */
-.hero{position:relative;padding:100px 0 48px;display:grid;grid-template-columns:1fr 1fr;gap:40px;align-items:center}
-.h1{font-size:clamp(32px,3.4vw,56px);line-height:1.04;margin:0 0 14px;letter-spacing:-.5px;
-  background:linear-gradient(90deg,#fff,#9ad6ff 55%,#ffe189 85%);-webkit-background-clip:text;color:transparent}
+.hero{
+  position:relative;
+  padding:100px 0 48px;
+  display:grid;grid-template-columns:1fr 1fr;
+  gap:40px;align-items:center
+}
+.h1{
+  font-size:clamp(32px,3.4vw,56px);
+  line-height:1.04;
+  margin:0 0 14px;
+  letter-spacing:-.5px;
+  background:linear-gradient(90deg,#fff,#9ad6ff 55%,#ffe189 85%);
+  -webkit-background-clip:text;
+  color:transparent;
+  font-weight:800;
+}
 
 /* Buttons */
-.btn{display:inline-flex;align-items:center;gap:10px;padding:12px 16px;border-radius:12px;border:1px solid var(--border);font-weight:800;cursor:pointer}
-.btn--primary,.btn.primary{background:linear-gradient(135deg,var(--accent),#4be3d1);color:#041221;border:none;box-shadow:0 10px 22px rgba(0,198,255,.25)}
-.btn--ghost,.btn.ghost{background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));color:var(--text)}
+.btn{
+  display:inline-flex;align-items:center;gap:10px;
+  padding:12px 16px;border-radius:12px;
+  border:1px solid var(--border);
+  font-weight:800;font-size:.9rem;line-height:1.2;
+  cursor:pointer
+}
+.btn--primary,.btn.primary{
+  background:linear-gradient(135deg,var(--accent),#4be3d1);
+  color:#041221;border:none;
+  box-shadow:0 10px 22px rgba(0,198,255,.25)
+}
+.btn--ghost,.btn.ghost{
+  background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));
+  color:var(--text)
+}
 
-/* Stats (optional) */
-.statbar{display:grid;grid-template-columns:repeat(4,1fr);gap:10px;margin-top:18px}
+/* Stats */
+.statbar{
+  display:grid;grid-template-columns:repeat(4,1fr);
+  gap:10px;margin-top:18px
+}
 .stat{
   background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,.01));
   border:1px solid var(--border);border-radius:16px;
   padding:14px;text-align:center
 }
-.stat .v{font-weight:800;font-size:18px}
-.stat .k{color:var(--muted);font-size:12px}
+.stat .v{font-weight:800;font-size:18px;line-height:1.2;color:var(--text)}
+.stat .k{color:var(--muted);font-size:12px;line-height:1.2;font-weight:500}
 
 /* ---- HERO MOCK ---- */
 .mock{
-  position:relative;border:1px solid var(--border);border-radius:20px;overflow:hidden;
-  box-shadow:0 0 60px rgba(0,198,255,.25);background:#0b1020;
+  position:relative;
+  border:1px solid var(--border);border-radius:20px;
+  overflow:hidden;
+  box-shadow:0 0 60px rgba(0,198,255,.25);
+  background:#0b1020;
   height:625px; max-height:640px;
 }
 .mock__slide{
@@ -122,21 +168,63 @@ section{padding:48px 0}
   transition:opacity 1s ease, transform 9s ease;
 }
 .mock__slide.active{opacity:1; transform:scale(1.08)}
-.mock__nav{position:absolute;bottom:12px;left:50%;transform:translateX(-50%);display:flex;gap:8px;z-index:2}
-.dot{width:10px;height:10px;border-radius:50%;background:rgba(255,255,255,.32);cursor:pointer;transition:transform .2s,background .2s}
-.dot.active{background:linear-gradient(135deg,var(--accent),#4be3d1);transform:scale(1.2)}
-.mock__toggle{
-  position:absolute;top:12px;right:12px;z-index:2;padding:7px 10px;border-radius:10px;
-  border:1px solid var(--border);background:rgba(255,255,255,.06);backdrop-filter:blur(8px);
-  font-weight:900;font-size:12px
+.mock__nav{
+  position:absolute;bottom:12px;left:50%;transform:translateX(-50%);
+  display:flex;gap:8px;z-index:2
 }
-.mock.fit .mock__slide{object-fit:contain;transform:scale(1)!important;background:#0b1020}
+.dot{
+  width:10px;height:10px;border-radius:50%;
+  background:rgba(255,255,255,.32);
+  cursor:pointer;transition:transform .2s,background .2s
+}
+.dot.active{
+  background:linear-gradient(135deg,var(--accent),#4be3d1);
+  transform:scale(1.2)
+}
+.mock__toggle{
+  position:absolute;top:12px;right:12px;z-index:2;
+  padding:7px 10px;border-radius:10px;
+  border:1px solid var(--border);
+  background:rgba(255,255,255,.06);backdrop-filter:blur(8px);
+  font-weight:900;font-size:12px;line-height:1.2;
+  color:var(--text);cursor:pointer;
+}
+.mock.fit .mock__slide{
+  object-fit:contain;transform:scale(1)!important;background:#0b1020
+}
 
 /* ---- Sections / Panels ---- */
-.section__head{display:flex;align-items:baseline;justify-content:space-between;margin-bottom:18px}
-.section__title{font-size:clamp(22px,2.2vw,34px);letter-spacing:-.2px}
-.pill{font-size:12px;color:#06142b;background:linear-gradient(135deg,var(--accent-2),#ffe39a);border-radius:999px;padding:6px 10px;font-weight:800}
-.panel{background:rgba(14,20,42,.66);border:1px solid var(--border);border-radius:var(--radius-lg);box-shadow:var(--shadow)}
+.section__head{
+  display:flex;align-items:baseline;justify-content:space-between;
+  flex-wrap:wrap;gap:12px;
+  margin-bottom:18px
+}
+.section__title{
+  font-size:clamp(22px,2.2vw,34px);
+  letter-spacing:-.2px;
+  font-weight:700;
+  color:var(--text)
+}
+.pill{
+  font-size:12px;
+  color:#06142b;
+  background:linear-gradient(135deg,var(--accent-2),#ffe39a);
+  border-radius:999px;
+  padding:6px 10px;
+  font-weight:800;
+  line-height:1.2;
+}
+.panel{
+  background:rgba(14,20,42,.66);
+  border:1px solid var(--border);
+  border-radius:var(--radius-lg);
+  box-shadow:var(--shadow);
+  padding:12px 16px;
+  line-height:1.5;
+  color:var(--text);
+  font-size:.9rem;
+  font-weight:500;
+}
 
 /* ---- Build log ---- */
 .timeline{display:grid;gap:12px}
@@ -144,26 +232,55 @@ section{padding:48px 0}
   display:grid;grid-template-columns:120px 1fr;gap:16px;
   padding:16px;border-radius:var(--radius-md);
   border:1px solid var(--border);
-  background:linear-gradient(180deg,rgba(255,255,255,.02),rgba(255,255,255,.01))
+  background:linear-gradient(180deg,rgba(255,255,255,.02),rgba(255,255,255,.01));
+  box-shadow:var(--shadow)
 }
-.entry .t{color:var(--muted);font-weight:700}
-.entry .b{line-height:1.6}
+.entry .t{color:var(--muted);font-weight:700;font-size:.8rem;line-height:1.3}
+.entry .b{line-height:1.6;font-size:.9rem;color:var(--text);font-weight:500}
 
 /* ---- Gallery ---- */
-.gallery{display:grid;grid-template-columns:repeat(12,1fr);gap:10px}
-.g{position:relative;border-radius:14px;overflow:hidden;border:1px solid var(--border);background:#0e1430;box-shadow:var(--shadow)}
+.gallery{
+  display:grid;grid-template-columns:repeat(12,1fr);gap:10px
+}
+.g{
+  position:relative;border-radius:14px;overflow:hidden;
+  border:1px solid var(--border);
+  background:#0e1430;box-shadow:var(--shadow)
+}
 .g--w6{grid-column:span 6;aspect-ratio:16/10}
 .g--w4{grid-column:span 4;aspect-ratio:4/3}
 .g--w3{grid-column:span 3;aspect-ratio:4/3}
+.g img{
+  position:absolute;inset:0;width:100%;height:100%;object-fit:cover;
+}
 
 /* ---- Cards ---- */
-.cards{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
+.cards{
+  display:grid;grid-template-columns:repeat(3,1fr);gap:12px
+}
 .card{
   padding:18px;border-radius:16px;border:1px solid var(--border);
   background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,.01));
-  display:flex;gap:12px;align-items:flex-start;justify-content:space-between;flex-direction:column
+  display:flex;flex-direction:column;gap:12px;
+  align-items:flex-start;justify-content:space-between;
+  box-shadow:var(--shadow);
+  min-height:100%;
+  color:var(--text);
 }
-.card h4,.card h3{margin:0}
+.card h4,.card h3{
+  margin:0;
+  font-weight:700;
+  color:var(--text);
+  line-height:1.3;
+  font-size:1rem;
+}
+.card p{
+  margin:0;
+  color:var(--muted);
+  font-size:.9rem;
+  line-height:1.4;
+  font-weight:500;
+}
 
 /* ---- Partner Logos (SVGs) ---- */
 .logo-strip{
@@ -183,7 +300,10 @@ section{padding:48px 0}
 footer{
   padding:40px 0 60px;color:var(--muted);
   border-top:1px solid var(--border);background:rgba(6,10,24,.55);
-  margin-top:40px
+  margin-top:40px;
+  font-size:.85rem;
+  line-height:1.4;
+  text-align:center;
 }
 
 /* ---- Responsive ---- */
@@ -205,6 +325,12 @@ footer{
   .brand__logo-img{ max-height:48px; }
   .brand__name{ font-size:1rem; }
   :root{ --logo-h:40px; }
+
+  .entry{
+    grid-template-columns:1fr;
+  }
+  .entry .t{order:2}
+  .entry .b{order:1}
 }
 
 /* Brand text stack */
@@ -214,17 +340,18 @@ footer{
   font-weight:700; font-size:.92rem; letter-spacing:.2px;
   background:linear-gradient(90deg,#cfe9ff 0%, #7fd3ff 55%, #ffe189 100%);
   -webkit-background-clip:text; background-clip:text; color:transparent; opacity:.9;
+  white-space:nowrap;
 }
 @media (max-width:820px){ .brand__tagline{font-size:.86rem; opacity:.85} }
 @media (max-width:600px){ .brand__tagline{display:none} }
 
-/* Compat grid (kept utility for future use) */
+/* Compat grid util */
 .compat-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(260px, 1fr)); gap:20px; margin-top:20px; }
 .compat-block { background: rgba(14, 20, 42, .7); border: 1px solid var(--border); border-radius: var(--radius-lg); padding: 24px; box-shadow: var(--shadow); transition: transform .25s ease, box-shadow .25s ease; }
 .compat-block:hover { transform: translateY(-4px); box-shadow: 0 12px 28px rgba(0,198,255,.25); }
-.compat-block h3 { color: var(--accent); margin: 0 0 10px; }
+.compat-block h3 { color: var(--accent); margin: 0 0 10px; font-size:1rem; line-height:1.3; font-weight:700; }
 .compat-block ul { list-style: none; padding: 0; margin: 0; }
-.compat-block li { padding: 6px 0; color: var(--text); font-weight: 500; border-bottom: 1px solid rgba(255,255,255,.05); }
+.compat-block li { padding: 6px 0; color: var(--text); font-weight: 500; border-bottom: 1px solid rgba(255,255,255,.05); font-size:.9rem; line-height:1.4; }
 .compat-block li:last-child { border-bottom: none; }
 </style>
 </head>
@@ -654,15 +781,15 @@ footer{
     <h2 class="section__title">FAQ</h2>
     <span class="pill">Straight answers</span>
   </div>
-  <details class="panel" style="margin:10px 0;padding:12px;">
+  <details class="panel" style="margin:10px 0;">
     <summary style="font-weight:800;cursor:pointer;">How long does assembly take?</summary>
     <p>About 2 hours with a hex set. Modules click in — no drilling.</p>
   </details>
-  <details class="panel" style="margin:10px 0;padding:12px;">
+  <details class="panel" style="margin:10px 0;">
     <summary style="font-weight:800;cursor:pointer;">Will it fit my chair?</summary>
     <p>Standard office/recliner shells fit the rails; bucket seats need side mounts.</p>
   </details>
-  <details class="panel" style="margin:10px 0;padding:12px;">
+  <details class="panel" style="margin:10px 0;">
     <summary style="font-weight:800;cursor:pointer;">Triple-monitor support?</summary>
     <p>Yes. Use the display module with the triple-arm kit. VESA 75/100.</p>
   </details>
@@ -876,7 +1003,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
   function tick(){
     ctx.clearRect(0,0,w,h);
 
-    // fixed brightness (matches CSS #aiCanvas{opacity:.55})
+    // lock brightness (matches CSS #aiCanvas opacity)
     c.style.opacity = '0.55';
 
     // move
@@ -924,7 +1051,6 @@ document.addEventListener('DOMContentLoaded', ()=>{
   }
   requestAnimationFrame(tick);
 })();
-
 </script>
 
 </body>
