--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 
 <style>
-/* ===== CoreFlux Simpit — Nav v3 / No Scroll Lighting ===== */
+/* ===== CoreFlux Simpit — Nav v4 Tall Hero / No Scroll Lighting ===== */
 
 /* ---- Tokens ---- */
 :root{
   --bg:#0b1020; --bg-2:#0a0f1e; --bg-3:#090e1a;
   --panel:#111831; --panel-2:#0f152b;
   --text:#e6eefc; --muted:#a6b0cf;
-  --accent:#00c6ff;          /* CoreFlux cyan */
-  --accent-2:#ffd23f;        /* soft gold */
+  --accent:#00c6ff;
+  --accent-2:#ffd23f;
   --border:rgba(255,255,255,.08);
   --blur:14px;
   --shadow:0 10px 30px rgba(0,0,0,.45), inset 0 1px 0 rgba(255,255,255,.04);
   --radius-xl:24px; --radius-lg:18px; --radius-md:14px;
   --logo-h:54px;
-  --nav-h:72px;              /* back up to comfortable height */
+  --nav-h:160px; /* MASSIVE nav hero bar */
 }
 
 /* ---- Base ---- */
@@ -66,7 +66,7 @@ section{padding:48px 0;position:relative;z-index:1}
 }
 
 /* =========================================================
-   NAV (AI glow, taller height)
+   NAV (tall hero header with AI glow)
    ========================================================= */
 .nav{
   position:sticky;
@@ -82,49 +82,62 @@ section{padding:48px 0;position:relative;z-index:1}
 
   border-bottom:1px solid rgba(0,198,255,.4);
   box-shadow:
-    0 20px 60px rgba(0,198,255,.18),
+    0 28px 80px rgba(0,198,255,.22),
     0 1px 0 rgba(255,255,255,.08) inset;
 }
 
+/* we split nav content vertically:
+   top row = brand hero
+   bottom row = links rail */
 .nav__inner{
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
   height:100%;
+  padding:16px 0 14px;
+}
+
+/* top row: brand */
+.nav__top{
   display:flex;
   align-items:center;
   justify-content:space-between;
-  padding:0;
+  gap:20px;
+  min-width:0;
+  flex:1;
 }
 
 /* brand block */
 .brand{
   display:flex;
   align-items:center;
-  gap:16px;
+  gap:20px;
   min-width:0;
 }
 
-/* logo puck */
+/* logo puck - larger to sit nicely in 160px bar */
 .brand__logo-wrap{
-  width:64px;
-  height:64px;
-  border-radius:14px;
+  width:88px;
+  height:88px;
+  border-radius:16px;
   display:grid;
   place-items:center;
   background:rgba(255,255,255,0.03);
   border:1px solid rgba(255,255,255,0.12);
   box-shadow:
-    0 12px 32px rgba(0,198,255,.4),
-    0 0 20px rgba(0,198,255,.6) inset;
+    0 16px 40px rgba(0,198,255,.45),
+    0 0 24px rgba(0,198,255,.7) inset;
   flex:0 0 auto;
 }
 .brand__logo-img{
   height:100%;
   width:auto;
-  max-height:50px;
+  max-height:64px;
   object-fit:contain;
   display:block;
 }
 
-/* tagline as hero identity */
+/* tagline as the hero statement */
 .brand__text{
   display:flex;
   flex-direction:column;
@@ -132,7 +145,7 @@ section{padding:48px 0;position:relative;z-index:1}
 }
 .brand__tagline{
   font-weight:800;
-  font-size:1.8rem;        /* large tagline */
+  font-size:2.2rem;     /* larger than last (1.8rem) */
   line-height:1.05;
   letter-spacing:-.03em;
   white-space:nowrap;
@@ -149,21 +162,24 @@ section{padding:48px 0;position:relative;z-index:1}
   color:transparent;
 
   text-shadow:
-    0 0 12px rgba(0,198,255,.6),
-    0 0 32px rgba(0,198,255,.4),
-    0 0 48px rgba(255,210,63,.2);
+    0 0 16px rgba(0,198,255,.7),
+    0 0 36px rgba(0,198,255,.45),
+    0 0 60px rgba(255,210,63,.28);
 }
 
-/* nav links */
-.nav__links{
+/* bottom row: nav links rail */
+.nav__links-row{
   display:flex;
-  gap:14px;
-  align-items:center;
+  justify-content:flex-end;
   flex-wrap:wrap;
+  row-gap:10px;
+  column-gap:14px;
   font-size:.8rem;
   line-height:1.2;
+  margin-top:16px;
 }
 
+/* pills */
 .chip{
   padding:6px 12px;
   border:1px solid var(--border);
@@ -183,6 +199,7 @@ section{padding:48px 0;position:relative;z-index:1}
   text-shadow:0 0 8px rgba(0,198,255,.7);
 }
 
+/* CTA */
 .cta{
   padding:8px 14px;
   border-radius:12px;
@@ -405,8 +422,22 @@ footer{
   .g--w3{grid-column:span 3}
   :root{ --logo-h:46px; }
 
-  .nav__links{
-    gap:10px;
+  .brand__logo-wrap{
+    width:72px;
+    height:72px;
+    border-radius:14px;
+  }
+  .brand__logo-img{
+    max-height:54px;
+  }
+  .brand__tagline{
+    font-size:1.8rem;
+    line-height:1.1;
+  }
+
+  .nav__links-row{
+    justify-content:flex-start;
+    column-gap:10px;
     font-size:.75rem;
   }
   .chip{
@@ -417,10 +448,6 @@ footer{
     padding:8px 12px;
     font-size:.75rem;
   }
-
-  .brand__tagline{
-    font-size:1.4rem;
-  }
 }
 @media (max-width:520px){
   .entry{
@@ -430,17 +457,23 @@ footer{
   .entry .b{order:1}
 
   .brand__logo-wrap{
-    width:54px;
-    height:54px;
+    width:60px;
+    height:60px;
     border-radius:10px;
   }
   .brand__logo-img{
-    max-height:42px;
+    max-height:46px;
   }
 
   .brand__tagline{
-    font-size:1.15rem;
+    font-size:1.4rem;
     line-height:1.15;
+    white-space:normal;
+  }
+
+  .nav__links-row{
+    justify-content:flex-start;
+    column-gap:8px;
   }
 
   :root{ --logo-h:40px; }
@@ -453,16 +486,19 @@ footer{
 
 <nav class="nav" aria-label="Primary">
   <div class="wrap nav__inner">
-    <div class="brand" aria-label="CoreFlux">
-      <div class="brand__logo-wrap">
-        <img class="brand__logo-img" src="assets/images/coreflux-logo.png" alt="CoreFlux logo">
-      </div>
-      <div class="brand__text">
-        <span class="brand__tagline">Dynamic Simpits. Brought to Life.</span>
+
+    <div class="nav__top">
+      <div class="brand" aria-label="CoreFlux">
+        <div class="brand__logo-wrap">
+          <img class="brand__logo-img" src="assets/images/coreflux-logo.png" alt="CoreFlux logo">
+        </div>
+        <div class="brand__text">
+          <span class="brand__tagline">Dynamic Simpits. Brought to Life.</span>
+        </div>
       </div>
     </div>
 
-    <div class="nav__links">
+    <div class="nav__links-row">
       <a class="chip" href="#prologue">About</a>
       <a class="chip" href="#story">The Switch</a>
       <a class="chip" href="#presets">Loadouts</a>
@@ -474,6 +510,7 @@ footer{
       <a class="chip" href="#community">Community</a>
       <a class="cta"  href="#configurator">Configure</a>
     </div>
+
   </div>
 </nav>
 
@@ -1067,7 +1104,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
   const ctx = c.getContext('2d');
 
   let w, h, pts = [];
-  const DENSITY = 0.00012;   // particles per px
+  const DENSITY = 0.00012;
   const LINK_DIST = 140;
   const MAX_LINKS = 3;
 
