--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 
 <style>
-/* ===== CoreFlux Simpit — Nav v7 Cyan Glow Unified ===== */
+/* ===== CoreFlux Simpit — Nav v8 Flat Banner + Hover Glow ===== */
 
 /* ---- Tokens ---- */
 :root{
@@ -80,7 +80,7 @@ section{
 }
 
 /* =========================================================
-   NAV (centered brand in tall header)
+   NAV (flat banner, glow only on hover of links)
    ========================================================= */
 .nav{
   position:sticky;
@@ -88,16 +88,20 @@ section{
   z-index:40;
   height:var(--nav-h);
 
+  /* flatter, darker, no cyan halo */
   background:
-    radial-gradient(circle at 20% 0%, rgba(0,198,255,.28) 0%, rgba(0,0,0,0) 60%),
-    radial-gradient(circle at 80% 0%, rgba(75,227,209,.18) 0%, rgba(0,0,0,0) 60%),
-    rgba(8,12,26,.55);
-  backdrop-filter:saturate(160%) blur(var(--blur));
+    linear-gradient(
+      to bottom,
+      rgba(8,12,26,.8) 0%,
+      rgba(5,8,20,.6) 60%,
+      rgba(4,6,16,.4) 100%
+    );
+  backdrop-filter:saturate(140%) blur(var(--blur));
 
   border-bottom:1px solid rgba(0,198,255,.4);
   box-shadow:
-    0 28px 80px rgba(0,198,255,.22),
-    0 1px 0 rgba(255,255,255,.08) inset;
+    0 1px 0 rgba(255,255,255,.08) inset,
+    0 30px 60px rgba(0,0,0,.9);
 }
 
 /* 2-row grid so we can center row 1 vertically */
@@ -108,11 +112,11 @@ section{
   padding:0 0 14px;
 }
 
-/* Row 1 = brand block. Give it min-height and flex-align center so logo sits middle of banner */
+/* Row 1 = brand block. Vertical center in band */
 .nav__top{
   display:flex;
   align-items:center;
-  min-height:120px; /* pulls it into middle of 160px band */
+  min-height:120px; /* so logo sits middle of 160px header */
   padding-top:8px;
   padding-bottom:8px;
   justify-content:space-between;
@@ -127,7 +131,7 @@ section{
   min-width:0;
 }
 
-/* bare logo, no border */
+/* bare logo */
 .brand__logo-img{
   height:140px;
   width:auto;
@@ -201,8 +205,14 @@ section{
 .chip:hover{
   color:var(--text);
   border-color:rgba(0,198,255,.6);
-  box-shadow:0 12px 24px rgba(0,198,255,.4);
-  text-shadow:0 0 8px rgba(0,198,255,.7);
+
+  /* cyan glow only on hover now */
+  box-shadow:
+    0 0 16px rgba(0,198,255,.8),
+    0 0 48px rgba(0,198,255,.45),
+    0 12px 24px rgba(0,198,255,.35);
+
+  text-shadow:0 0 8px rgba(0,198,255,.8);
 }
 
 /* CTA */
@@ -217,9 +227,15 @@ section{
   border:none;
   cursor:pointer;
   box-shadow:
-    0 20px 40px rgba(0,198,255,.45),
-    0 0 16px rgba(0,198,255,.8),
-    0 0 60px rgba(0,198,255,.5);
+    0 10px 20px rgba(0,0,0,.8);
+  transition:120ms ease;
+}
+.cta:hover{
+  box-shadow:
+    0 0 16px rgba(0,198,255,.9),
+    0 0 60px rgba(0,198,255,.55),
+    0 24px 40px rgba(0,198,255,.4);
+  text-shadow:0 0 8px rgba(0,0,0,.8);
 }
 
 /* =========================================================
@@ -285,7 +301,7 @@ section{
   height:625px;
   max-height:640px;
 
-  /* cyan / teal glow (unified with nav) */
+  /* cyan / teal glow still on product mock */
   box-shadow:
     0 0 80px rgba(0,198,255,.45),
     0 40px 140px rgba(75,227,209,.28);
