--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@ section{
   box-shadow:0 10px 22px rgba(0,198,255,.25)
 }
 .btn--ghost,.btn.ghost{
-  background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));
-  color:var(--text)
+  background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));color:var(--text)
 }
 
 /* Stats */
@@ -679,7 +678,7 @@ footer{
 
 <!-- STICKY CTA -->
 <button id="stickyCTA" onclick="document.querySelector('#configurator').scrollIntoView({behavior:'smooth'})">
-  Configure My Build
+  Build Now
 </button>
 
 <!-- NAV -->
@@ -697,19 +696,19 @@ footer{
 
     <div class="nav__links-row">
       <a class="chip" href="#prologue">About</a>
-      <a class="chip" href="#story">The Switch</a>
-      <a class="chip" href="#frame-pre">Why Not a Normal Cockpit?</a>
-      <a class="chip" href="#frame">Why It Works</a>
-      <a class="chip" href="#force">Rigidity</a>
-      <a class="chip" href="#kits">Starter Kits</a>
+      <a class="chip" href="#story">Switch</a>
+      <a class="chip" href="#frame-pre">Why&nbsp;Not</a>
+      <a class="chip" href="#frame">Frame</a>
+      <a class="chip" href="#force">Force</a>
+      <a class="chip" href="#kits">Kits</a>
       <a class="chip" href="#configurator">Build</a>
       <a class="chip" href="#games">Games</a>
-      <a class="chip" href="#compat">Supported Gear</a>
+      <a class="chip" href="#compat">Gear</a>
       <a class="chip" href="#tuning">Tuning</a>
-      <a class="chip" href="#quickstart">Quick-Start</a>
-      <a class="chip" href="#fit">Who It's For</a>
+      <a class="chip" href="#quickstart">Quick</a>
+      <a class="chip" href="#fit">Fit</a>
       <a class="chip" href="#reserve">Reserve</a>
-      <a class="cta"  href="#configurator">Configure</a>
+      <a class="cta"  href="#configurator">Build Now</a>
     </div>
 
   </div>
